Melhorando o event copy

--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
     </div>
 
     <!-- INFORMAÇÕES -->
-    <p id="caracter">Quantidade de caracteres: 0</p>
-    <p id="palavras">Total de palavras: 0</p>
-    
-    </div>
+    <p>
+        Total de caracteres:
+        <span id="caracter">0</span>
+    </p>
+
+    <p>
+        Total de palavras:
+        <span id="palavras">0</span>
+    </p>
     <script src="main.js"></script>
 </body>
 </html>
